--- a/ScreenshotMockupGenerator/app.config
+++ b/ScreenshotMockupGenerator/app.config
@@ -8,7 +8,10 @@
     <userSettings>
         <ScreenshotMockupGenerator.Properties.Settings>
             <setting name="myparams" serializeAs="String">
-                <value>ttttttt</value>
+                <value />
+            </setting>
+            <setting name="InitialLocation" serializeAs="String">
+                <value />
             </setting>
         </ScreenshotMockupGenerator.Properties.Settings>
     </userSettings>
